--- a/assets/css/estilo.css
+++ b/assets/css/estilo.css
@@ -519,3 +519,73 @@ align-items: flex-start;
 width: 100%;
 align-items: flex-start; 
 }
+
+
+@media (max-width: 429px) {
+    .cabecalho {
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 15px;
+    gap: 10px;
+    }
+    
+    .cabecalho-imagem {
+    width: 50px;
+    right: 50px;
+    }
+    
+    .cabecalho-menu {
+    flex-direction: column;
+    gap: 16px;
+    margin-top: 16px;
+    }
+    
+    /*Faça o conteúdo primário se adaptar em dispositivos móveis:
+    - Adicione um media query para dispositivos com largura menor que 600px*/
+    .conteudo-primario {
+    padding: 4px 16px;
+    }
+        
+    .conteudo-primario-titulo {
+    padding-top: 11px;
+    }
+        
+    .conteudo-primario-paragrafo {
+    font-size: 9.6px;
+    }
+    
+    /*Torne o slider responsivo:
+    - Adicione um media query para dispositivos com largura menor que 600px*/
+    .slider, 
+    .slider-02 {
+    width: 50px;
+    height: 50px;
+    }
+    .slider span img, 
+    .slider-02 span img {
+    width: 90px;
+    height: 90px;
+    }
+                
+    /*Adapte a divisão dos personagens em dispositivos móveis:
+    - Adicione um media query para dispositivos com largura menor que 600px:*/
+    .divisao-personagem {
+    flex-direction: row;
+    align-items: center;
+    text-align: center;
+    }
+    
+    .personagem-titulo-principal-divisao {
+    margin-bottom: 16px;
+    }
+    
+    #molda-personagem {
+    width: 100%;
+    align-items: flex-start;
+    }
+    
+    .rodape{
+    width: 100%;
+    align-items: flex-start; 
+    }
+    }  
